--- a/index.html
+++ b/index.html
@@ -11,7 +11,56 @@
     <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-57.png">
     <link rel="shortcut icon" href="/favicon.ico" sizes="32x32" type="image/vnd.microsoft.icon">
     <link rel="icon" href="/images/SkyNinja-16.png" sizes="16x16" type="image/png">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/cosmo/bootstrap.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <style>body { padding-top: 50px; }</style>
   </head>
   <body>
+
+    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">SkyNinja</a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
+            <li><a href="/download"><i class="fa fa-download"></i> Download</a></li>
+            <li><a href="/donate"><i class="fa fa-btc"></i> Donations</a></li>
+            <li><a href="/contact"><i class="fa fa-envelope"></i> Contact</a></li> 
+          </ul>
+          <!--<ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Language <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">English</a></li>
+                <li><a href="#">Русский</a></li>
+              </ul>
+            </li>
+          </ul>-->
+        </div>
+      </div>
+    </nav>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="alert alert-dismissable alert-warning">
+          <h4>Under Construction</h4>
+          <p>Will be available soon!</p>
+        </div>
+      </div>
+    </div>
+
+    <script src="http://yandex.st/jquery/2.1.0/jquery.min.js"></script>
+    <script src="http://yandex.st/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
   </body>
 </html>
