--- a/ru/index.html
+++ b/ru/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="/images/SkyNinja-16.png" sizes="16x16" type="image/png">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/cosmo/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <style>body { padding-top: 50px; }</style>
+    <style>body { padding-top: 50px; font-family: Calibri, Candara, Arial, sans-serif; }</style>
   </head>
   <body>
 
@@ -27,28 +27,30 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">SkyNinja</a>
+          <a class="navbar-brand" href="/ru/">SkyNinja</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/"><i class="fa fa-home fa-fw"></i> Home</a></li>
-            <li><a href="/download"><i class="fa fa-download fa-fw"></i> Download</a></li>
-            <li><a href="/donate"><i class="fa fa-btc fa-fw"></i> Donations</a></li>
-            <li><a href="/contact"><i class="fa fa-envelope fa-fw"></i> Contact</a></li> 
+            <li><a href="/ru/"><i class="fa fa-home fa-fw"></i> Home</a></li>
+            <li><a href="/ru/download"><i class="fa fa-download fa-fw"></i> Скачать</a></li>
+            <li><a href="/ru/donate"><i class="fa fa-btc fa-fw"></i> Donations</a></li>
+            <li><a href="/ru/contact"><i class="fa fa-envelope fa-fw"></i> Contact</a></li> 
           </ul>
-          <!--<ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Language <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">English</a></li>
-                <li><a href="#">Русский</a></li>
+                <li><a href="/">English</a></li>
+                <li><a href="/ru/">Русский</a></li>
               </ul>
             </li>
-          </ul>-->
+          </ul>
         </div>
       </div>
     </nav>
+
+    <!-- End header. -->
 
     <div class="row">
       <div class="col-lg-12">
@@ -58,6 +60,8 @@
         </div>
       </div>
     </div>
+
+    <!-- Footer. -->
 
     <script src="http://yandex.st/jquery/2.1.0/jquery.min.js"></script>
     <script src="http://yandex.st/bootstrap/3.1.1/js/bootstrap.min.js"></script>
