--- a/ru/index.html
+++ b/ru/index.html
@@ -13,7 +13,11 @@
     <link rel="icon" href="/images/SkyNinja-16.png" sizes="16x16" type="image/png">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/cosmo/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <style>body { padding-top: 50px; font-family: Calibri, Candara, Arial, sans-serif; }</style>
+    <style>
+      body { padding-top: 50px; font-family: Calibri, Candara, Arial, sans-serif; }
+      footer { background: #e6e6e6; padding: 25px 0; }
+      footer ul { list-style: none; padding: 0; }
+    </style>
   </head>
   <body>
 
@@ -35,7 +39,7 @@
             <li><a href="/ru/"><i class="fa fa-home fa-fw"></i> Home</a></li>
             <li><a href="/ru/download"><i class="fa fa-download fa-fw"></i> Скачать</a></li>
             <li><a href="/ru/donate"><i class="fa fa-btc fa-fw"></i> Donations</a></li>
-            <li><a href="/ru/contact"><i class="fa fa-envelope fa-fw"></i> Contact</a></li> 
+            <li><a href="/ru/contact"><i class="fa fa-envelope fa-fw"></i> Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
@@ -62,6 +66,46 @@
     </div>
 
     <!-- Footer. -->
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2">
+            <h5>SkyNinja</h5>
+            <ul>
+              <li>Home</li>
+              <li>Download</li>
+              <li>Donations</li>
+            </ul>
+          </div>
+          <div class="col-lg-2">
+            <h5>Connect</h5>
+            <ul>
+              <li><i class="fa fa-fw fa-envelope"></i> <a href="/ru/contact">Contact</a></li>
+              <li><i class="fa fa-fw fa-twitter"></i> <a href="http://twitter.com/skyninjapp">Twitter</a></li>
+              <li><i class="fa fa-fw fa-facebook"></i> Facebook</li>
+              <li><i class="fa fa-fw fa-google-plus"></i> <a href="https://plus.google.com/114098906513991312153" rel="publisher">Google+</li>
+              <li><i class="fa fa-fw fa-vk"></i> VKontakte</li>
+            </ul>
+          </div>
+          <div class="col-lg-4">
+            <h5>About</h5>
+            <ul>
+              <li>Developed by <a href="http://eigene.in/" target="_blank">Pavel Perestoronin</a>.</li>
+              <li>Hosted on <a href="http://github.com/" target="_blank">GitHub</a>.</li>
+              <li>Based on <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.</li>
+              <li>Theme from <a href="http://bootswatch.com/" target="_blank">Bootswatch</a>.</li>
+              <li>Icons from <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>.</li>
+              <li>Webfonts from <a href="http://www.google.com/webfonts" target="_blank">Google</a>.</li>
+            </ul>
+          </div>
+          <div class="col-lg-4">
+            <h3>Share</h3>
+            <p>Share this page with your friends!</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="http://yandex.st/jquery/2.1.0/jquery.min.js"></script>
     <script src="http://yandex.st/bootstrap/3.1.1/js/bootstrap.min.js"></script>
