--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <li><i class="fa fa-fw fa-envelope"></i> <a href="//contact">Contact</a></li>
               <li><i class="fa fa-fw fa-twitter"></i> <a href="http://twitter.com/skyninjapp">Twitter</a></li>
               <li><i class="fa fa-fw fa-facebook"></i> Facebook</li>
-              <li><i class="fa fa-fw fa-google-plus"></i> <a href="https://plus.google.com/114098906513991312153" rel="publisher">Google+</li>
+              <li><i class="fa fa-fw fa-google-plus"></i> <a href="https://plus.google.com/114098906513991312153" rel="publisher">Google+</a></li>
               <li><i class="fa fa-fw fa-vk"></i> VKontakte</li>
             </ul>
           </div>
