--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-2">
-            <h5>SkyNinja</h5>
+            <h4>SkyNinja</h4>
             <ul>
-              <li>Home</li>
-              <li>Download</li>
-              <li>Donations</li>
+              <li><i class="fa fa-home fa-fw"></i> <a href="//">Home</a></li>
+              <li><i class="fa fa-download fa-fw"></i> <a href="//download">Download</a></li>
+              <li><i class="fa fa-btc fa-fw"></i> <a href="//donate">Donations</a></li>
             </ul>
           </div>
           <div class="col-lg-2">
-            <h5>Connect</h5>
+            <h4>Connect</h4>
             <ul>
               <li><i class="fa fa-fw fa-envelope"></i> <a href="//contact">Contact</a></li>
-              <li><i class="fa fa-fw fa-twitter"></i> <a href="http://twitter.com/skyninjapp">Twitter</a></li>
-              <li><i class="fa fa-fw fa-facebook"></i> Facebook</li>
+              <li><i class="fa fa-fw fa-twitter"></i> <a href="https://twitter.com/skyninjapp" target="_blank">Twitter</a></li>
+              <li><i class="fa fa-fw fa-facebook"></i> <a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank">Facebook</a></li>
               <li><i class="fa fa-fw fa-google-plus"></i> <a href="https://plus.google.com/114098906513991312153" rel="publisher">Google+</a></li>
-              <li><i class="fa fa-fw fa-vk"></i> VKontakte</li>
+              <li><i class="fa fa-fw fa-vk"></i> <a href="http://vk.com/skyninja" target="_blank">VKontakte</a></li>
             </ul>
           </div>
           <div class="col-lg-4">
-            <h5>About</h5>
+            <h4>About</h4>
             <ul>
               <li>Developed by <a href="http://eigene.in/" target="_blank">Pavel Perestoronin</a>.</li>
               <li>Hosted on <a href="http://github.com/" target="_blank">GitHub</a>.</li>
