--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="//">SkyNinja</a>
+          <a class="navbar-brand" href="/">SkyNinja</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="//"><i class="fa fa-home fa-fw"></i> Home</a></li>
-            <li><a href="//download"><i class="fa fa-download fa-fw"></i> Download</a></li>
-            <li><a href="//donate"><i class="fa fa-btc fa-fw"></i> Donations</a></li>
-            <li><a href="//contact"><i class="fa fa-envelope fa-fw"></i> Contact</a></li>
+            <li><a href="/"><i class="fa fa-home fa-fw"></i> Home</a></li>
+            <li><a href="/download"><i class="fa fa-download fa-fw"></i> Download</a></li>
+            <li><a href="/donate"><i class="fa fa-btc fa-fw"></i> Donations</a></li>
+            <li><a href="/contact"><i class="fa fa-envelope fa-fw"></i> Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
@@ -73,15 +73,15 @@
           <div class="col-lg-2">
             <h4>SkyNinja</h4>
             <ul>
-              <li><i class="fa fa-home fa-fw"></i> <a href="//">Home</a></li>
-              <li><i class="fa fa-download fa-fw"></i> <a href="//download">Download</a></li>
-              <li><i class="fa fa-btc fa-fw"></i> <a href="//donate">Donations</a></li>
+              <li><i class="fa fa-home fa-fw"></i> <a href="/">Home</a></li>
+              <li><i class="fa fa-download fa-fw"></i> <a href="/download">Download</a></li>
+              <li><i class="fa fa-btc fa-fw"></i> <a href="/donate">Donations</a></li>
             </ul>
           </div>
           <div class="col-lg-2">
             <h4>Connect</h4>
             <ul>
-              <li><i class="fa fa-fw fa-envelope"></i> <a href="//contact">Contact</a></li>
+              <li><i class="fa fa-fw fa-envelope"></i> <a href="/contact">Contact</a></li>
               <li><i class="fa fa-fw fa-twitter"></i> <a href="https://twitter.com/skyninjapp" target="_blank">Twitter</a></li>
               <li><i class="fa fa-fw fa-facebook"></i> <a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank">Facebook</a></li>
               <li><i class="fa fa-fw fa-google-plus"></i> <a href="https://plus.google.com/114098906513991312153" rel="publisher">Google+</a></li>
