--- a/ru/index.html
+++ b/ru/index.html
@@ -14,9 +14,15 @@
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/cosmo/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <style>
-      body { padding-top: 50px; font-family: Calibri, Candara, Arial, sans-serif; }
-      footer { background: #e6e6e6; padding: 25px 0; }
+      body { padding-top: 50px; font-family: "Segoe UI", Helvetica, Arial, sans-serif; }
+      footer { background: #e6e6e6; }
       footer ul { list-style: none; padding: 0; }
+      .large-margin { margin: 50px 0; }
+      .large-text { line-height: 1.1; font-size: 39px; font-family: "Segoe UI Light", Helvetica, Arial, sans-serif; }
+      .medium-margin { margin: 25px 0; }
+      .medium-padding { padding: 25px 0; }
+      .medium-smaller-text { line-height: 1.1; font-size: 19px; }
+      .medium-text { line-height: 1.1; font-size: 24px; }
     </style>
   </head>
   <body>
@@ -56,18 +62,29 @@
 
     <!-- End header. -->
 
-    <div class="row">
-      <div class="col-lg-12">
-        <div class="alert alert-dismissable alert-warning">
-          <h4>Under Construction</h4>
-          <p>Will be available soon!</p>
+    <div class="row medium-padding" style="background: #9700ff; color: white;">
+      <div class="col-lg-1"></div>
+      <div class="col-lg-5">
+        <div class="large-text large-margin">
+          SkyNinja:<br>
+          All-In-One backup tool for Skype
+        </div>
+        <div class="medium-text">
+          Never lose your chats.
+        </div>
+        <div class="medium-margin">
+          <button type="button" class="btn btn-success medium-smaller-text">Download now! <i class="fa fa-download"></i></button>
+          <div>.NET Framework 4.5 required</div>
         </div>
       </div>
+      <div class="col-lg-5">
+      </div>
+      <div class="col-lg-1"></div>
     </div>
 
     <!-- Footer. -->
 
-    <footer>
+    <footer class="medium-padding">
       <div class="container">
         <div class="row">
           <div class="col-lg-2">
@@ -102,6 +119,8 @@
           <div class="col-lg-4">
             <h3>Share</h3>
             <p>Share this page with your friends!</p>
+            <p>TODO</p>
+            <p>Pavel Perestoronin &copy; 2014</p>
           </div>
         </div>
       </div>
