--- a/ru/download/index.html
+++ b/ru/download/index.html
@@ -11,53 +11,13 @@
     <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-57.png">
     <link rel="shortcut icon" href="/favicon.ico" sizes="32x32" type="image/vnd.microsoft.icon">
     <link rel="icon" href="/images/SkyNinja-16.png" sizes="16x16" type="image/png">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/cosmo/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-    <style>
-      body { padding-top: 50px; font-family: "Segoe UI", Helvetica, Arial, sans-serif; }
-      footer { background: #e6e6e6; }
-      footer ul { list-style: none; padding: 0; }
-      .large-margin { margin: 50px 0; }
-      .large-text { line-height: 1.1; font-size: 39px; font-family: "Segoe UI Light", Helvetica, Arial, sans-serif; }
-      .medium-margin { margin: 25px 0; }
-      .medium-padding { padding: 25px 0; }
-      .medium-smaller-text { line-height: 1.1; font-size: 19px; }
-      .medium-text { line-height: 1.1; font-size: 24px; }
-    </style>
   </head>
   <body>
 
-    <nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/ru/">SkyNinja</a>
-        </div>
+    <nav role="navigation">
 
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/ru/"><i class="fa fa-home fa-fw"></i> Home</a></li>
-            <li><a href="/ru/download"><i class="fa fa-download fa-fw"></i> Скачать</a></li>
-            <li><a href="/ru/donate"><i class="fa fa-btc fa-fw"></i> Donations</a></li>
-            <li><a href="/ru/contact"><i class="fa fa-envelope fa-fw"></i> Contact</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Language <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="/download">English</a></li>
-                <li><a href="/ru/download">Русский</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
     </nav>
 
     <!-- End header. -->
@@ -107,9 +67,6 @@
         </div>
       </div>
     </footer>
-
-    <script src="http://yandex.st/jquery/2.1.0/jquery.min.js"></script>
-    <script src="http://yandex.st/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
   </body>
 </html>
