--- a/download/index.html
+++ b/download/index.html
@@ -26,46 +26,8 @@
 
     <!-- Footer. -->
 
-    <footer class="medium-padding">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-2">
-            <h4>SkyNinja</h4>
-            <ul>
-              <li><i class="fa fa-home fa-fw"></i> <a href="/">Home</a></li>
-              <li><i class="fa fa-download fa-fw"></i> <a href="/download">Download</a></li>
-              <li><i class="fa fa-btc fa-fw"></i> <a href="/donate">Donations</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-2">
-            <h4>Connect</h4>
-            <ul>
-              <li><i class="fa fa-fw fa-envelope"></i> <a href="/contact">Contact</a></li>
-              <li><i class="fa fa-fw fa-twitter"></i> <a href="https://twitter.com/skyninjapp" target="_blank">Twitter</a></li>
-              <li><i class="fa fa-fw fa-facebook"></i> <a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank">Facebook</a></li>
-              <li><i class="fa fa-fw fa-google-plus"></i> <a href="https://plus.google.com/114098906513991312153" rel="publisher">Google+</a></li>
-              <li><i class="fa fa-fw fa-vk"></i> <a href="http://vk.com/skyninja" target="_blank">VKontakte</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-4">
-            <h4>About</h4>
-            <ul>
-              <li>Developed by <a href="http://eigene.in/" target="_blank">Pavel Perestoronin</a>.</li>
-              <li>Hosted on <a href="http://github.com/" target="_blank">GitHub</a>.</li>
-              <li>Based on <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.</li>
-              <li>Theme from <a href="http://bootswatch.com/" target="_blank">Bootswatch</a>.</li>
-              <li>Icons from <a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>.</li>
-              <li>Webfonts from <a href="http://www.google.com/webfonts" target="_blank">Google</a>.</li>
-            </ul>
-          </div>
-          <div class="col-lg-4">
-            <h3>Share</h3>
-            <p>Share this page with your friends!</p>
-            <p>TODO</p>
-            <p>Pavel Perestoronin &copy; 2014</p>
-          </div>
-        </div>
-      </div>
+    <footer>
+
     </footer>
 
   </body>
