Header and footer

--- a/index.html
+++ b/index.html
@@ -17,15 +17,62 @@
   <body>
 
     <nav role="navigation">
-
+      <ul>
+        <li><a href="/" role="banner">SkyNinja</a></li><!--
+     --><li><a href="/"><i class="fa fa-fw fa-home"></i> Home</a></li><!--
+     --><li><a href="/download"><i class="fa fa-fw fa-download"></i> Download</a></li><!--
+     --><li><a href="/donate"><i class="fa fa-fw fa-btc"></i> Donate</a></li><!--
+     --><li><a href="/contact"><i class="fa fa-fw fa-envelope"></i> Contact</a></li><!--
+     --><li><a href="#"><i class="fa fa-fw fa-angle-down"></i> Language</a></li>
+      </ul>
     </nav>
 
     <!-- End header. -->
 
+<div style="height: 100px;"></div>
+
     <!-- Footer. -->
 
     <footer>
-
+      <ul>
+        <li>
+          <h6>SkyNinja</h6>
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/download">Download</a></li>
+            <li><a href="/donate">Donate</a></li>
+          </ul>
+        </li><!--
+     --><li>
+          <h6>Connect</h6>
+          <ul>
+            <li><a href="/contact">Contact</a></li>
+            <li><a href="#" target="_blank">Facebook</a></li>
+            <li><a href="#" target="_blank">Twitter</a></li>
+            <li><a href="#" target="_blank" rel="publisher">Google+</a></li>
+            <li><a href="#" target="_blank">VK.com</a></li>
+          </ul>
+        </li><!--
+     --><li class="footer-share">
+          <h6>Share</h6>
+          <p>Share this page with your friends.</p>
+          <div id="ya-share"></div>
+          <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
+          <script>
+            new Ya.share({
+              element: "ya-share",
+              l10n: "en",
+              theme: "counter",
+              image: "http://skyninja.im/images/SkyNinja-128.png",
+              elementStyle: {
+                quickServices: ["facebook", "twitter", "vkontakte", "gplus", "moimir", "odnoklassniki"],
+                type: "small"
+              }
+            });
+          </script>
+          <p>Pavel Perestoronin &copy; 2014</p>
+        </li>
+      </ul>
     </footer>
 
   </body>
