--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
     <!-- End header. -->
 
-<div style="height: 100px;"></div>
+<section>
+  <h1><i class="fa fa-fw fa-arrow-circle-o-right"></i> Meet SkyNinja</h1>
+</section>
 
     <!-- Footer. -->
 
@@ -47,10 +49,10 @@
           <h6>Connect</h6>
           <ul>
             <li><a href="/contact">Contact</a></li>
-            <li><a href="#" target="_blank">Facebook</a></li>
-            <li><a href="#" target="_blank">Twitter</a></li>
-            <li><a href="#" target="_blank" rel="publisher">Google+</a></li>
-            <li><a href="#" target="_blank">VK.com</a></li>
+            <li><a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank">Facebook</a></li>
+            <li><a href="https://twitter.com/skyninjapp" target="_blank">Twitter</a></li>
+            <li><a href="https://plus.google.com/b/114098906513991312153/114098906513991312153" target="_blank" rel="publisher">Google+</a></li>
+            <li><a href="https://vk.com/skyninja" target="_blank">VKontakte</a></li>
           </ul>
         </li><!--
      --><li class="footer-share">
