--- a/download/index.html
+++ b/download/index.html
@@ -47,10 +47,10 @@
           <h6>Connect</h6>
           <ul>
             <li><a href="/contact">Contact</a></li>
-            <li><a href="#" target="_blank">Facebook</a></li>
-            <li><a href="#" target="_blank">Twitter</a></li>
-            <li><a href="#" target="_blank" rel="publisher">Google+</a></li>
-            <li><a href="#" target="_blank">VK.com</a></li>
+            <li><a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank">Facebook</a></li>
+            <li><a href="https://twitter.com/skyninjapp" target="_blank">Twitter</a></li>
+            <li><a href="https://plus.google.com/b/114098906513991312153/114098906513991312153" target="_blank" rel="publisher">Google+</a></li>
+            <li><a href="https://vk.com/skyninja" target="_blank">VKontakte</a></li>
           </ul>
         </li><!--
      --><li class="footer-share">
