--- a/contact/index.html
+++ b/contact/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" href="/images/SkyNinja-16.png" sizes="16x16" type="image/png">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
   </head>
   <body>
 
@@ -30,7 +31,22 @@
 
     <!-- End header. -->
 
+<section id="top-section">
+  <h1><i class="fa fa-envelope"></i> Contact Us</h1>
 
+  <h2>Email</h2>
+  <p>If you have any question, comment or feedback, then please do not hesitate to contact us.</p>
+  <p><a href="mailto:contact@skyninja.im" target="_blank" class="button"><i class="fa fa-fw fa-envelope"></i> Email Us</a></p>
+
+  <h2>Social Networks</h2>
+  <p>You may also reach us on social networks.</p>
+  <p>
+    <a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank" class="button button-blue"><i class="fa fa-fw fa-facebook"></i> Facebook</a><!--
+    --><a href="https://plus.google.com/b/114098906513991312153/114098906513991312153" target="_blank" class="button button-red"><i class="fa fa-fw fa-google-plus"></i> Google+</a><!--
+    --><a href="https://twitter.com/skyninjapp" target="_blank" class="button button-blue"><i class="fa fa-fw fa-twitter"></i> Twitter</a><!--
+    --><a href="https://vk.com/skyninja" target="_blank" class="button button-blue-inverse"><i class="fa fa-fw fa-vk"></i> VKontakte</a>
+  </p>
+</section>
 
     <!-- Footer. -->
 
@@ -58,7 +74,6 @@
           <h6>Share</h6>
           <p>Share this page with your friends.</p>
           <div id="ya-share"></div>
-          <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
           <script>
             new Ya.share({
               element: "ya-share",
