--- a/ru/download/index.html
+++ b/ru/download/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" href="/images/SkyNinja-16.png" sizes="16x16" type="image/png">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
   </head>
   <body>
 
@@ -30,7 +31,19 @@
 
     <!-- End header. -->
 
-
+<section id="top-section">
+  <h1><i class="fa fa-fw fa-download"></i> Downloads</h1>
+  <p>
+    <strong>SkyNinja</strong> is currently in beta and has command-line interface only. <a href="/ru/contact">Follow us</a> to get notified about new versions.
+  </p>
+  <div>
+    <a href="http://yadi.sk/d/5dFD55Z-LH7xS" target="_blank" class="large button"><i class="fa fa-download"></i> Download Now!</a>
+    <div>
+      <small>Command Line Interface Only 0.1 Beta</small><br>
+      <small><a href="http://www.microsoft.com/en-us/download/details.aspx?id=30653" title="Download .NET Framework 4.5" target="_blank"><i class="fa fa-download"></i> .NET Framework 4.5</a> is required</small>
+    </div>
+  </div>
+</section>
 
     <!-- Footer. -->
 
@@ -58,7 +71,6 @@
           <h6>Share</h6>
           <p>Share this page with your friends.</p>
           <div id="ya-share"></div>
-          <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
           <script>
             new Ya.share({
               element: "ya-share",
