--- a/ru/download/index.html
+++ b/ru/download/index.html
@@ -25,7 +25,7 @@
      --><li><a href="/ru/download"><i class="fa fa-fw fa-download"></i> Download</a></li><!--
      --><li><a href="/ru/donate"><i class="fa fa-fw fa-btc"></i> Donate</a></li><!--
      --><li><a href="/ru/contact"><i class="fa fa-fw fa-envelope"></i> Contact</a></li><!--
-     --><li><a href="#"><i class="fa fa-fw fa-angle-down"></i> Language</a></li>
+     --><!--<li><a href="#"><i class="fa fa-fw fa-angle-down"></i> Language</a></li>-->
       </ul>
     </nav>
 
