--- a/ru/donate/index.html
+++ b/ru/donate/index.html
@@ -15,6 +15,12 @@
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
+    <!-- OpenGraph. -->
+    <meta property="og:title" content="SkyNinja">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://skyninja.im">
+    <meta property="og:image" content="http://skyninja.im/images/SkyNinja-128.png">
+    <meta property="og:description" content="Export chat messages and call history from Skype">
   </head>
   <body>
 
