Short URL for Google+

--- a/contact/index.html
+++ b/contact/index.html
@@ -48,7 +48,7 @@
   <p>You may also reach me on social networks.</p>
   <p>
     <a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank" class="button button-blue"><i class="fa fa-fw fa-facebook"></i> Facebook</a><!--
-    --><a href="https://www.google.com/+SkyninjaImApp?rel=author" target="_blank" class="button button-red"><i class="fa fa-fw fa-google-plus"></i> Google+</a><!--
+    --><a href="https://www.google.com/+SkyninjaImApp" target="_blank" class="button button-red"><i class="fa fa-fw fa-google-plus"></i> Google+</a><!--
     --><a href="https://twitter.com/skyninjapp" target="_blank" class="button button-blue"><i class="fa fa-fw fa-twitter"></i> Twitter</a><!--
     --><a href="https://vk.com/skyninja" target="_blank" class="button button-blue-inverse"><i class="fa fa-fw fa-vk"></i> VKontakte</a>
   </p>
@@ -72,7 +72,7 @@
             <li><a href="/contact">Contact</a></li>
             <li><a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank">Facebook</a></li>
             <li><a href="https://twitter.com/skyninjapp" target="_blank">Twitter</a></li>
-            <li><a href="https://www.google.com/+SkyninjaImApp?rel=author" target="_blank" rel="publisher">Google+</a></li>
+            <li><a href="https://www.google.com/+SkyninjaImApp" target="_blank" rel="publisher">Google+</a></li>
             <li><a href="https://vk.com/skyninja" target="_blank">VKontakte</a></li>
           </ul>
         </li><!--
