--- a/ru/download/index.html
+++ b/ru/download/index.html
@@ -69,7 +69,7 @@
             <li><a href="/ru/contact">Contact</a></li>
             <li><a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank">Фейсбук</a></li>
             <li><a href="https://twitter.com/skyninjapp" target="_blank">Твиттер</a></li>
-            <li><a href="https://www.google.com/+SkyninjaImApp?rel=author" target="_blank" rel="publisher">Google+</a></li>
+            <li><a href="https://www.google.com/+SkyninjaImApp" target="_blank" rel="publisher">Google+</a></li>
             <li><a href="https://vk.com/skyninja" target="_blank">ВКонтакте</a></li>
           </ul>
         </li><!--
