--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <li><a href="/contact">Contact</a></li>
             <li><a href="https://www.facebook.com/pages/SkyNinja/834438353239570" target="_blank">Facebook</a></li>
             <li><a href="https://twitter.com/skyninjapp" target="_blank">Twitter</a></li>
-            <li><a href="https://www.google.com/+SkyninjaImApp?rel=author" target="_blank" rel="publisher">Google+</a></li>
+            <li><a href="https://www.google.com/+SkyninjaImApp" target="_blank" rel="publisher">Google+</a></li>
             <li><a href="https://vk.com/skyninja" target="_blank">VKontakte</a></li>
           </ul>
         </li><!--
