Remove Flattr button

--- a/donate/index.html
+++ b/donate/index.html
@@ -71,8 +71,7 @@
       <input type="hidden" name="sum" value="50" data-type="number">
       <input type="hidden" name="paymentType" value="PC">
       <input type="submit" class="button button-orange donate-button" value="Yandex.Money">
-    </form><!--
-    --><a href="https://flattr.com/submit/auto?user_id=eigenein&url=http%3A%2F%2Fskyninja.im" target="_blank" class="button donate-button">Flattr</a>
+    </form>
   </div>
 
   <h2>Translations</h2>
