--- a/ru/donate/index.html
+++ b/ru/donate/index.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="skype, skyninja, skype historian, chat, call, history"/>
     <title>Donations &middot; SkyNinja</title>
-    <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-144.png" sizes="144x144" type="image/png">
-    <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-114.png" sizes="114x114" type="image/png">
-    <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-72.png" sizes="72x72" type="image/png">
-    <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-57.png">
+    <link rel="apple-touch-icon-precomposed" href="/skyninja/images/SkyNinja-144.png" sizes="144x144" type="image/png">
+    <link rel="apple-touch-icon-precomposed" href="/skyninja/images/SkyNinja-114.png" sizes="114x114" type="image/png">
+    <link rel="apple-touch-icon-precomposed" href="/skyninja/images/SkyNinja-72.png" sizes="72x72" type="image/png">
+    <link rel="apple-touch-icon-precomposed" href="/skyninja/images/SkyNinja-57.png">
     <link rel="shortcut icon" href="/favicon.ico" sizes="32x32" type="image/vnd.microsoft.icon">
-    <link rel="icon" href="/images/SkyNinja-16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/skyninja/images/SkyNinja-16.png" sizes="16x16" type="image/png">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
     <!-- OpenGraph. -->
     <meta property="og:title" content="SkyNinja">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://skyninja.im">
-    <meta property="og:image" content="http://skyninja.im/images/SkyNinja-128.png">
+    <meta property="og:url" content="http://eigene.in/skyninja">
+    <meta property="og:image" content="http://eigene.in/skyninja/skyninja/images/SkyNinja-128.png">
     <meta property="og:description" content="Export chat messages and call history from Skype">
   </head>
   <body>
@@ -71,8 +71,7 @@
       <input type="hidden" name="sum" value="50" data-type="number">
       <input type="hidden" name="paymentType" value="PC">
       <input type="submit" class="button button-orange donate-button" value="Yandex.Money">
-    </form><!--
-    --><a href="https://flattr.com/submit/auto?user_id=eigenein&url=http%3A%2F%2Fskyninja.im" target="_blank" class="button donate-button">Flattr</a>
+    </form>
   </div>
 
   <h2>Translations</h2>
@@ -139,7 +138,7 @@
               }
             });
           </script>
-          <p>eigenein &copy; 2014</p>
+          <p>eigenein &copy; 2014-2015</p>
         </li>
       </ul>
     </footer>
