--- a/ru/download/index.html
+++ b/ru/download/index.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="skype, skyninja, skype historian, chat, call, history"/>
     <title>Скачать &middot; SkyNinja</title>
-    <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-144.png" sizes="144x144" type="image/png">
-    <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-114.png" sizes="114x114" type="image/png">
-    <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-72.png" sizes="72x72" type="image/png">
-    <link rel="apple-touch-icon-precomposed" href="/images/SkyNinja-57.png">
+    <link rel="apple-touch-icon-precomposed" href="/skyninja/images/SkyNinja-144.png" sizes="144x144" type="image/png">
+    <link rel="apple-touch-icon-precomposed" href="/skyninja/images/SkyNinja-114.png" sizes="114x114" type="image/png">
+    <link rel="apple-touch-icon-precomposed" href="/skyninja/images/SkyNinja-72.png" sizes="72x72" type="image/png">
+    <link rel="apple-touch-icon-precomposed" href="/skyninja/images/SkyNinja-57.png">
     <link rel="shortcut icon" href="/favicon.ico" sizes="32x32" type="image/vnd.microsoft.icon">
-    <link rel="icon" href="/images/SkyNinja-16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/skyninja/images/SkyNinja-16.png" sizes="16x16" type="image/png">
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8"></script>
     <!-- OpenGraph. -->
     <meta property="og:title" content="SkyNinja">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://skyninja.im">
-    <meta property="og:image" content="http://skyninja.im/images/SkyNinja-128.png">
+    <meta property="og:url" content="http://eigene.in/skyninja">
+    <meta property="og:image" content="http://eigene.in/skyninja/skyninja/images/SkyNinja-128.png">
     <meta property="og:description" content="Export chat messages and call history from Skype">
   </head>
   <body>
@@ -43,16 +43,16 @@
     <strong>SkyNinja</strong> is currently in beta and has command-line interface only. <a href="/ru/contact">Follow us</a> to get notified about new versions.
   </p>
   <div>
-    <a href="http://yadi.sk/d/pqw020pwLVZ9F" target="_blank" class="large button"><i class="fa fa-download"></i> Download Now!</a>
+    <a href="https://github.com/eigenein/skyninja/releases/download/v0.1-20150318/SkyNinja-0.1-20150318.zip" target="_blank" class="large button"><i class="fa fa-download"></i> Download Now!</a>
     <div>
-      <small>Command Line Interface Only v0.1-20140330</small><br>
+      <small>Command Line Interface Only v0.1-20150318</small><br>
       <small><a href="http://www.microsoft.com/en-us/download/details.aspx?id=30653" title="Download .NET Framework 4.5" target="_blank"><i class="fa fa-download"></i> .NET Framework 4.5</a> is required</small>
     </div>
   </div>
 
   <h2>Previous Versions</h2>
   <ul>
-    <li><a href="http://yadi.sk/d/5dFD55Z-LH7xS" target="_blank"><i class="fa fa-fw fa-download"></i> SkyNinja-0.1-20140327</a></li>
+    <li><a href="https://github.com/eigenein/skyninja/releases/download/v0.1/SkyNinja-0.1-20140327.zip" target="_blank"><i class="fa fa-fw fa-download"></i> SkyNinja-0.1-20140327</a></li>
   </ul>
 </section>
 
@@ -94,7 +94,7 @@
               }
             });
           </script>
-          <p>eigenein &copy; 2014</p>
+          <p>eigenein &copy; 2014-2015</p>
         </li>
       </ul>
     </footer>
