--- a/donate/index.html
+++ b/donate/index.html
@@ -26,11 +26,11 @@
 
     <nav role="navigation">
       <ul>
-        <li><a href="/" role="banner">SkyNinja</a></li><!--
-     --><li><a href="/"><i class="fa fa-fw fa-home"></i> Home</a></li><!--
-     --><li><a href="/download"><i class="fa fa-fw fa-download"></i> Download</a></li><!--
-     --><li><a href="/donate"><i class="fa fa-fw fa-btc"></i> Donate</a></li><!--
-     --><li><a href="/contact"><i class="fa fa-fw fa-envelope"></i> Contact</a></li><!--
+        <li><a href="/skyninja/" role="banner">SkyNinja</a></li><!--
+     --><li><a href="/skyninja/"><i class="fa fa-fw fa-home"></i> Home</a></li><!--
+     --><li><a href="/skyninja/download"><i class="fa fa-fw fa-download"></i> Download</a></li><!--
+     --><li><a href="/skyninja/donate"><i class="fa fa-fw fa-btc"></i> Donate</a></li><!--
+     --><li><a href="/skyninja/contact"><i class="fa fa-fw fa-envelope"></i> Contact</a></li><!--
      --><!--<li><a href="#"><i class="fa fa-fw fa-angle-down"></i> Language</a></li>-->
       </ul>
     </nav>
