--- a/ru/download/index.html
+++ b/ru/download/index.html
@@ -26,11 +26,11 @@
 
     <nav role="navigation">
       <ul>
-        <li><a href="/ru/" role="banner">SkyNinja</a></li><!--
-     --><li><a href="/ru/"><i class="fa fa-fw fa-home"></i> Home</a></li><!--
-     --><li><a href="/ru/download"><i class="fa fa-fw fa-download"></i> Download</a></li><!--
-     --><li><a href="/ru/donate"><i class="fa fa-fw fa-btc"></i> Donate</a></li><!--
-     --><li><a href="/ru/contact"><i class="fa fa-fw fa-envelope"></i> Contact</a></li><!--
+        <li><a href="/ru/skyninja/" role="banner">SkyNinja</a></li><!--
+     --><li><a href="/ru/skyninja/"><i class="fa fa-fw fa-home"></i> Home</a></li><!--
+     --><li><a href="/ru/skyninja/download"><i class="fa fa-fw fa-download"></i> Download</a></li><!--
+     --><li><a href="/ru/skyninja/donate"><i class="fa fa-fw fa-btc"></i> Donate</a></li><!--
+     --><li><a href="/ru/skyninja/contact"><i class="fa fa-fw fa-envelope"></i> Contact</a></li><!--
      --><!--<li><a href="#"><i class="fa fa-fw fa-angle-down"></i> Language</a></li>-->
       </ul>
     </nav>
