--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
         <li>
           <h6>SkyNinja</h6>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/download">Download</a></li>
-            <li><a href="/donate">Donate</a></li>
+            <li><a href="/skyninja/">Home</a></li>
+            <li><a href="/skyninja/download">Download</a></li>
+            <li><a href="/skyninja/donate">Donate</a></li>
           </ul>
         </li><!--
      --><li>
