--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -61,9 +61,9 @@
         <li>
           <h6>SkyNinja</h6>
           <ul>
-            <li><a href="/ru/">Home</a></li>
-            <li><a href="/ru/download">Download</a></li>
-            <li><a href="/ru/donate">Donate</a></li>
+            <li><a href="/ru/skyninja/">Home</a></li>
+            <li><a href="/ru/skyninja/download">Download</a></li>
+            <li><a href="/ru/skyninja/donate">Donate</a></li>
           </ul>
         </li><!--
      --><li>
