--- a/donate/index.html
+++ b/donate/index.html
@@ -62,7 +62,7 @@
     </form><!--
     --><form method="POST" target="_blank" action="https://money.yandex.ru/quickpay/confirm.xml" class="donate-form">
       <input type="hidden" name="receiver" value="410011693851843">
-      <input type="hidden" name="formcomment" value="Pavel Perestoronin">
+      <input type="hidden" name="formcomment" value="SkyNinja">
       <input type="hidden" name="short-dest" value="Donation to SkyNinja">
       <input type="hidden" name="quickpay-form" value="donate">
       <input type="hidden" name="targets" value="http://eigene.in/skyninja">
