Reorder payment methods

--- a/ru/donate/index.html
+++ b/ru/donate/index.html
@@ -45,12 +45,7 @@
   </p>
 
   <div>
-    <a href="https://www.coinbase.com/checkouts/7dccbfe73cc437ef30544df40bf91644" target="_blank" class="button button-blue donate-button">Bitcoins</a>
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="POST" target="_blank" class="donate-form">
-      <input type="hidden" name="cmd" value="_s-xclick">
-      <input type="hidden" name="hosted_button_id" value="WTJ9Q8N3RE6ZS">
-      <input type="submit" class="button button-blue donate-button" value="PayPal">
-    </form><!--
+    <a href="https://www.coinbase.com/checkouts/7dccbfe73cc437ef30544df40bf91644" target="_blank" class="button button-blue donate-button">Bitcoins</a><!--
     --><form method="POST" target="_blank" action="https://money.yandex.ru/quickpay/confirm.xml" class="donate-form">
       <input type="hidden" name="receiver" value="410011693851843">
       <input type="hidden" name="formcomment" value="eigenein">
@@ -70,6 +65,11 @@
       <input type="hidden" name="sum" value="50" data-type="number">
       <input type="hidden" name="paymentType" value="PC">
       <input type="submit" class="button button-orange donate-button" value="Yandex.Money">
+    </form><!--
+    --><form action="https://www.paypal.com/cgi-bin/webscr" method="POST" target="_blank" class="donate-form">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="WTJ9Q8N3RE6ZS">
+      <input type="submit" class="button button-blue donate-button" value="PayPal">
     </form>
   </div>
 
